Fix mobile layout shift for bottom bar

--- a/styles/product.css
+++ b/styles/product.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 65px);
+    height: calc(100dvh - 65px);
 }
 
 /* Section principale */
